applications/garage/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    kubernetes.io/metadata.name: garage
