applications/garage/base/resources/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-admin
  namespace: garage
spec:
  type: ClusterIP
  ports:
  - name: admin
    port: 3903
    targetPort: 3903
    protocol: TCP
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
